# learn_pydanticai

./: .gitignore  NETWORK_ISSUES.md  README.md  SOLUTION_SUMMARY.md  database.py  lumi_adk.py  lumi_system.py  lumi_system_02.py  main.py  main_01.py  main_01_1.py  main_02.py  main_03.py  main_claude_direct.py  main_dependencies.py  main_openai_direct.py  main_prompts.py  main_streaming_json.py  main_tool.py  pyproject.toml  sample.txt  test_connection.py  try_anthropic.py
